// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text all props 1`] = `
<Text
  style={
    Object {
      "color": "pink",
      "fontFamily": "Segoe UI",
      "fontSize": 12,
      "fontWeight": "500",
      "margin": 0,
    }
  }
>
  All props
</Text>
`;

exports[`Text all tokens 1`] = `
<Text
  style={
    Object {
      "color": "orange",
      "fontFamily": "Wingdings",
      "fontSize": 15,
      "fontWeight": "900",
      "margin": 0,
    }
  }
>
  All tokens
</Text>
`;

exports[`Text default 1`] = `
<Text
  style={
    Object {
      "color": "#505050",
      "fontFamily": "Segoe UI",
      "fontSize": 12,
      "fontWeight": "500",
      "margin": 0,
    }
  }
>
  Text default
</Text>
`;
